[package]
name = "ising-lib"
version = "0.1.0"
edition = "2021"
description = "Ising model simulation api, on lattices and graphs."
keywords = ["ising", "physics", "simulation", "graph", "lattice"]
categories = ["science", "simulation"]
authors = ["dcxSt <dcxstephen@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dcxSt/ising-lib"
# repository = "https://github.com/micouy/ising_lib" # add a repository when there is one

[badges]
travis-ci = { repository = "dcxSt/ising-lib" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
rand = "0.8.5"
